# tyna

./: .gitignore  CMakeLists.txt  README.md  flake.nix  justfile
examples/: binary_ops.tyl  boolean.tyl  fib.tyl  fib_tern.tyl  functions.tyl  test.tyl  test_array_types.tyl  test_arrays.tyl  test_assign.tyl  test_error.tyl  test_error_bounds.tyl  test_print_multi.tyl  test_types.tyl
examples/fs/: fs_smoke.tn
examples/heap/: new_struct_constructor_literal.tn  pointer_null_free.tyl  struct_recursion.tn
examples/multifile/: main.tn
examples/multifile/lib/: inventory.tn  item.tn  item.tyl  user.tn
examples/test/: arithmetic.tyl  array_4d.tyl  arrays.tyl  bounds_check.tyl  control_flow.tyl  defer.tyl  errors.tyl  for.tyl  functions.tyl  hybrid_array.tyl  increment_decrement.tyl  loop.tyl  print_variadic.tyl  strings.tyl  types_casts.tyl  while.tyl
examples/tests/: arrays_fixed_literal_len.tn  arrays_fixed_literal_len.tyl  arrays_slice_view.tn  arrays_slice_view.tyl  casts_primitive_types.tn  control_break_continue_nested.tyl  control_if_else_ternary.tyl  control_loop_while_for.tn  defer_cleanup.tn  error_handling.tn  error_system.tn  error_system.tyl  expressions_arithmetic.tyl  expressions_compares_logic.tn  functions_recursion_return.tn  heap_ref_syntax.tn  pointers_address_deref.tn  static_methods.tn  string_array_conversion.tyl  string_buffer.tn  string_buffer.tyl  string_conditional_move_failure.tn  string_move_after_into_str.tn  string_str_to_char_ptr.tn  strings_array_conversion.tn  strings_array_conversion.tyl  strings_char_for_in.tn  strings_concat.tn  strings_slice_semantics.tn  strings_slice_semantics.tyl  structs_fields_impl_methods.tyl  switch_string_union.tn  tagged_union_cast_runtime_panic.tn  tagged_union_cast_runtime_panic.tyl  types_primitive_variants.tyl  union_access.tyl  variables_const_assignments.tyl
include/tyl/: ast.h  ast_dump.h  cli.h  codegen.h  errors.h  lexer.h  parser.h  runner.h  sema.h  semantic.h  type.h  utils.h
include/tyna/: ast.h  ast_dump.h  cli.h  codegen.h  errors.h  lexer.h  parser.h  runner.h  sema.h  type.h  utils.h
src/: codegen.c  codegen.h  lexer.c  lexer.h  main.c  parser.c  runner.c  runner.h  utils.c  utils.h
src/backend/: cg_aggregates.c  cg_calls.c  cg_control_flow.c  cg_core.c  cg_expr.c  cg_func.c  cg_function.c  cg_internal.h  cg_module.c  cg_ops.c  cg_runtime.c  cg_stmt.c  cg_stmts.c  cg_string.c  cg_symbols.c  cg_types.c  cg_utils.c  cg_values.c  codegen.c  codegen_core.c  codegen_expr.c  codegen_func.c  codegen_private.h  codegen_stmt.c  codegen_string.c  codegen_symbols.c  codegen_types.c  codegen_utils.c  runner.c
src/frontend/: ast.c  ast_utils.c  errors.c  lexer.c  module.c  parser.c  parser_internal.h  parser_stmt.c  parser_type.c  sema_core.c  sema_decl.c  sema_expr.c  sema_internal.h  sema_stmt.c  semantic.c
src/shared/: alloc.c  array.c  fs.c  map.c  path.c  runtime.c  type.c  utils.c
src/tool/: ast_dump.c  cli.c  main.c
stdlib/: array.tn  error.tn  fs.tn  fs.tyl  list.tn  map.tn  path.tn  std.tn  std.tyl  str.tn  string.tn
tyna-lang/: driver.tn  main.tn
(+65 files in other folders)
